# SimpleRenderEngine

./: CMakeLists.txt  compile.sh
include/: material.h  object.h  sre.h  transform.h  window.h
include/loader/: objloader.h
shaders/: test_f.glsl  test_v.glsl
src/: camera.cpp  camera.h  enums.h  icosphere_generator.hpp  light.cpp  light.h  main.cpp  material.cpp  mesh.cpp  mesh.h  object.cpp  program.cpp  program.h  scene.cpp  scene.h  transform.cpp  transform.h  triangle.cpp  triangle.h  window.cpp
src/loader/: objloader.cpp  objloader.h
